--- a/main.html
+++ b/main.html
@@ -8,6 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<main>
+
+	<div class="card">
+		<h1></h1>
+		<p>Price: Rs.200</p>
+		<p>Description: A brief description of the product or service, also enclosed within a paragraph tag.</p>
+		<button></button>
+	</div>
+	</main>
+
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
