--- a/main.html
+++ b/main.html
@@ -11,10 +11,11 @@
 	<main>
 
 	<div class="card">
-		<h1></h1>
+		<img src="https://static.vecteezy.com/system/resources/previews/022/403/398/non_2x/valentines-day-background-with-hearts-ai-generated-free-photo.jpeg" alt="Heart-img"/>
+		<h1>Pricing Card</h1>
 		<p>Price: Rs.200</p>
 		<p>Description: A brief description of the product or service, also enclosed within a paragraph tag.</p>
-		<button></button>
+		<button type="submit">Buy Now</button>
 	</div>
 	</main>
 
